chore: statistics api
